--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>Athlete Band</title>
+    <link rel="shortcut icon" href="./src/assets/icon.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>  
